# castellan

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  SECURITY.md  rust-toolchain.toml
.devcontainer/: Dockerfile  allowed-domains.txt  castellan-supervisor.sh  devcontainer.json  download-vsix.sh  fetch-vscode-extension-shas.sh  init-firewall.sh  node-zshrc
.github/workflows/: ci.yml  release.yml
src/: config.rs  dns.rs  main.rs  meta.rs  nft.rs  setup.rs  verify.rs
