[package]
name = "castellan"
version = "0.2.0"
edition = "2024"
description = "DNS-driven egress firewall for development containers"
license = "Apache-2.0"
repository = "https://github.com/wormholelabs-xyz/castellan"
readme = "README.md"
keywords = ["dns", "firewall", "egress", "nftables", "devcontainer"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "castellan"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
globset = "0.4.18"
hickory-proto = "0.26.1"
hickory-resolver = "0.26.1"
hickory-server = "0.26.1"
ipnet = { version = "2.12.0", features = ["serde"] }
regex = "1.12.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", default-features = false, features = ["rt-multi-thread", "net", "macros", "signal", "time", "process", "io-util"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
